[gd_scene load_steps=19 format=3 uid="uid://caxju13721uvv"]

[ext_resource type="Texture2D" uid="uid://ds4qvv25rw5mv" path="res://imgs/card_drop.png" id="1_67ffj"]
[ext_resource type="Script" path="res://drops/card_drop.gd" id="1_kihk6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_ne7u2"]
atlas = ExtResource("1_67ffj")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ojhxn"]
atlas = ExtResource("1_67ffj")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lf7au"]
atlas = ExtResource("1_67ffj")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ds8vx"]
atlas = ExtResource("1_67ffj")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gi6ab"]
atlas = ExtResource("1_67ffj")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f546y"]
atlas = ExtResource("1_67ffj")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ufxp"]
atlas = ExtResource("1_67ffj")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjcfv"]
atlas = ExtResource("1_67ffj")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_trlx4"]
atlas = ExtResource("1_67ffj")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1xvk"]
atlas = ExtResource("1_67ffj")
region = Rect2(144, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_qwosp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ne7u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ojhxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lf7au")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ds8vx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gi6ab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f546y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3ufxp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjcfv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_trlx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1xvk")
}],
"loop": true,
"name": &"default",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_bgbcu"]

[sub_resource type="Animation" id="Animation_6b48i"]
resource_name = "start"
length = 0.5
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -5), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_i2nv5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_1u4g2"]
resource_name = "idle"
loop_mode = 1
step = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("card_sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -1), Vector2(0, 0), Vector2(0, 1), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8wp76"]
_data = {
"RESET": SubResource("Animation_i2nv5"),
"idle": SubResource("Animation_1u4g2"),
"start": SubResource("Animation_6b48i")
}

[node name="card_drop" type="Area2D" groups=["Card", "Drop"]]
collision_layer = 8
script = ExtResource("1_kihk6")

[node name="card_sprite" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_qwosp")
frame_progress = 0.530649

[node name="get_drop" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_bgbcu")

[node name="time_to_delete" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8wp76")
}

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="time_to_delete" to="." method="_on_time_to_delete_timeout"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
